stechec (3.1) unstable; urgency=low

  * Bump to 3.1.
  * Many packaging improvements.

 -- Olivier Gournet <victor@leonardo>  Wed,  2 Aug 2006 19:31:19 +0000

stechec (3.0) unstable; urgency=low

  * Initial Release.

 -- Olivier Gournet <victor@le-poulpe.net>  Sun, 16 Jul 2006 14:50:53 +0200