@@ -1,0 +1,2 @@
+usr/lib/globulus*so*
+usr/share/stechec/prolo2007
