@@ -2,8 +2,9 @@ stechec (3.1) unstable; urgency=low
 
   * Bump to 3.1.
   * Many packaging improvements.
+  * Add prologin 2007 rules.
 
- -- Olivier Gournet <victor@leonardo>  Wed,  2 Aug 2006 19:31:19 +0000
+ -- Olivier Gournet <victor@leonardo>  Wed,  9 May 2007 00:06:16 +0200
 
 stechec (3.0) unstable; urgency=low
 
